<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/perDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp">

    <EditText
        android:id="@+id/perDiaDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Item description"
        android:inputType="text"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/perDiaEstimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Days you expect the item to last"
        android:inputType="number"
        android:maxLines="1"/>
</LinearLayout>