<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="shoppingRV" type="id"/>
    <item name="perishableRV" type="id"/>
    <item name="tasksRV" type="id"/>
</resources>