<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/cardview_default_radius"
                                    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ViewStub
            android:id="@+id/slot"
            android:inflatedId="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </ViewStub>

        <ImageButton
            android:id="@+id/check"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:scaleType="center"
            android:src="@drawable/ic_check_black_24dp"
            android:tint="?android:attr/textColorSecondary"/>
    </LinearLayout>

</android.support.v7.widget.CardView>