<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/threeLine">

        <TextView
            android:id="@+id/listTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="Three Line List Item Title"/>

        <TextView
            android:id="@+id/listLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Three Line List Item line 1"/>

        <TextView
            android:id="@+id/listLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            tools:text="a;lskdjflaskdjf;alskjdf;alksjdf;laksjdf;lkajsd;flkajsd;flkjas;dlkfj;alskdjf"/>
    </LinearLayout>
</FrameLayout>