<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:id="@+id/taskDialog">

    <EditText
        android:id="@+id/taskDiaDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Task description"
        android:inputType="text"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/taskDiaDueDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="Due Date"
            android:inputType="none"
            android:maxLines="1"
            android:focusable="false"/>

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_today_black_24dp"/>
    </LinearLayout>
</LinearLayout>