...
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/shopping">

        <TextView
            android:id="@+id/listTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
...
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Two Line List Item line 1"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/cartRemove"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:scaleType="center"
        android:src="@drawable/ic_remove_shopping_cart_black_24dp"
...
