<?xml version="1.0" encoding="utf-8"?>
<EditText
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shopDiaDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Item description"
    android:inputType="text"
    android:maxLines="1"
    android:layout_margin="4dp"/>